# CodexRepository

./: .env.example  .gitignore  AGENTS.md  README.md  pytest.ini  requirements.txt  setup.ps1  setup.sh  setup_new.ps1  setup_simple.ps1
AuditWifiApp/: .env  .env.example  .gitignore  AGENTS.md  BSSID_ENHANCEMENT_SUMMARY.md  COMPLETION_STATUS.md  CORRECTION_COMPLETE_REPORT.md  FINAL_SUMMARY.md  GUIDE_AMR.md  GUIDE_NAVIGATION.md  GUIDE_WIFI.md  IMPLEMENTATION_COMPLETE_REPORT.md  IT_ANALYSIS_CAPABILITIES.md  OPENAI_CUSTOM_INSTRUCTIONS_GUIDE.md  RAPPORT_FINAL_README.md  README.md  RESPONSIVE_FIX_REPORT.md  SCREEN_DETECTION_REPORT.md  TRACEROUTE_FIX_SUMMARY.md  amr_monitor.py  amr_ping_monitor.py  app_config.py  bootstrap_ui.py  config.yaml  config_manager.py  conversational_formatter.py  debug_start.py  demo_navigation.py  detailed_alert_analysis.py  diagnostic_app.py  fix_navigation.py  heatmap_generator.py  history_manager.py  launch_demo.py  log_manager.py  logger.py  mac_tag_manager.py  mac_tags.json  main.py  moxa_analyzer.py  (+38 more)
AuditWifiApp/archive/: .coverage  .env.test  .gitignore  EXTENSION_README.md  TEST_SUMMARY.md  api_config.py  app_launcher.py  audit_steps.py  fix_main.py  fix_main_full.py  fix_runner_indent.py  fixed_method.py  lancer_app.bat  lancer_app.py  launch_selector.py  launcher.py  log_manager.py.bak  log_manager.py.new  log_manager_backup.py  logger.py  main.py  main.py.bak  moxa_ai_analyzer.py  moxa_analyzer.py  moxa_analyzer_20250514_105945.py  moxa_config_analyzer.py  moxa_log_analyzer.py  moxa_log_analyzer.py.bak  moxa_log_analyzer.py.new  (+29 more)
(+108 files in other folders)
